# project_template_DA

./: pyproject.toml
notebooks/: project_eda.ipynb
src/: eda_func.py
