[tool.poetry]
name = "project_template_da"
version = "0.1.0"
description = "project template for DA"
authors = ["mikhego <egm.fwrk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.13.0"
pandas = "^1.4.2"
plotly = "^5.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
